[gd_scene load_steps=26 format=3 uid="uid://beoso4omvcifm"]

[ext_resource type="Texture2D" uid="uid://uun8yist7yib" path="res://assets/textures/vfx/Air Burst.png" id="1_mm00r"]
[ext_resource type="Script" path="res://scenes/spell_attacks/ground_explosion.gd" id="1_poh2b"]
[ext_resource type="Texture2D" uid="uid://5d7yloa3do5f" path="res://assets/textures/vfx/Preparing Burst.png" id="2_gct75"]
[ext_resource type="Shader" path="res://shaders/ground_explosion.gdshader" id="2_phc0e"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lksqc"]
shader = ExtResource("2_phc0e")
shader_parameter/toggle = true

[sub_resource type="AtlasTexture" id="AtlasTexture_f4vq8"]
atlas = ExtResource("1_mm00r")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ax3et"]
atlas = ExtResource("1_mm00r")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_epeto"]
atlas = ExtResource("1_mm00r")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_naaam"]
atlas = ExtResource("1_mm00r")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7jv1d"]
atlas = ExtResource("1_mm00r")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_v7dj6"]
atlas = ExtResource("1_mm00r")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yuusx"]
atlas = ExtResource("1_mm00r")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mvqys"]
atlas = ExtResource("1_mm00r")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mfskm"]
atlas = ExtResource("1_mm00r")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1nak"]
atlas = ExtResource("2_gct75")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tjw60"]
atlas = ExtResource("2_gct75")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1c6s1"]
atlas = ExtResource("2_gct75")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0o808"]
atlas = ExtResource("2_gct75")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lqqi8"]
atlas = ExtResource("2_gct75")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_m67er"]
atlas = ExtResource("2_gct75")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lwmen"]
atlas = ExtResource("2_gct75")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_m7cma"]
atlas = ExtResource("2_gct75")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dcog5"]
atlas = ExtResource("2_gct75")
region = Rect2(48, 96, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_pxfvs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f4vq8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ax3et")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_epeto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_naaam")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7jv1d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v7dj6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yuusx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mvqys")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mfskm")
}],
"loop": false,
"name": &"explode",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1nak")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tjw60")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1c6s1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0o808")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lqqi8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m67er")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lwmen")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m7cma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dcog5")
}],
"loop": false,
"name": &"start",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mnrx6"]
size = Vector2(14, 46)

[node name="GroundExplosion" type="Node2D"]
script = ExtResource("1_poh2b")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_lksqc")
position = Vector2(1, -24)
rotation = -1.5708
sprite_frames = SubResource("SpriteFrames_pxfvs")
animation = &"start"

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -24)
shape = SubResource("RectangleShape2D_mnrx6")
disabled = true

[node name="RayCast2D_Left" type="RayCast2D" parent="."]
position = Vector2(0, -4)
target_position = Vector2(-35, 0)
collision_mask = 4

[node name="RayCast2D_DownLeft" type="RayCast2D" parent="."]
position = Vector2(-35, -30)
target_position = Vector2(0, 35)
collision_mask = 4

[node name="RayCast2D_Right" type="RayCast2D" parent="."]
position = Vector2(0, -4)
target_position = Vector2(35, 0)
collision_mask = 4

[node name="RayCast2D_DownRight" type="RayCast2D" parent="."]
position = Vector2(35, -30)
target_position = Vector2(0, 35)
collision_mask = 4

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
